License: wxWindows

Change Log:

#-----------------------------------------------------------------------------#
Changes since last release:

VERSION 0.7.xx
DATE 0x/xx/2012
52nd Alpha Release

NEW: [features/enhancements]

BUG FIXES:
+Fix unable to edit file extension associations on Linux systems (issue 745).
+Fix issue with duplicated @ symbols inserted by generic completer (issue 743).

#-----------------------------------------------------------------------------#

VERSION 0.7.08
DATE 07/15/2012
51st Alpha Release

NEW: [features/enhancements]
+New version of FileBrowser Plugin version 2.0. Nearly a complete re-write of
the main part of the plugin to use a new file view. Adds ability to turn editor
tab synchronization on and off. Adds configuration for filtering files out of the
view and new configuration for showing hidden files.
+Choose directory dialog from Find Dialog will now automatically expand to the directory of the
current file.
+Update embedded aui

BUG FIXES:
+Fix major and apparently very long standing issue on Windows systems where
application profiles were not getting updated correctly and settings would get
lost between updates.
+Fix issues with sessions not getting updated properly under some use cases.
+Fix crash condition that could occur when reload of file fails.
+Fix file encoding detection issue that some systems experienced.
+Fix UTF-16 decoding issues / regressions due to change in behavior between
python2.6 and 2.7.
+Fix error caused by empty file names getting into the file history which
could cause startup failures.
+Fix crash in Find in Directory that could occur due to threaded access to GetTranslation.

#-----------------------------------------------------------------------------#

VERSION 0.7.01
DATE 04/23/2012
50th Alpha Release

NEWS:
Update to fix issue with translations.

BUG FIXES:
+Fix localizations not loading correctly.

#-----------------------------------------------------------------------------#
VERSION 0.7.00