@@ -18,6 +18,7 @@ NEW: [features/enhancements]
 BUG FIXES:
 +Fix unable to edit file extension associations on Linux systems (issue 745).
 +Fix issue with duplicated @ symbols inserted by generic completer (issue 743).
++Fix some Unicode handling issues in log handler.
 
 #-----------------------------------------------------------------------------#
 
